# FxP_Mat_Lib

./: CMakeLists.txt  README.md  new.txt
include/: cordic.h  fixedinclude.h  fixedptc.h  matrix_arithmetic.h  mult64_with_32.h  param.h  parameter_upload_const.h  sat_fixedptc.h
libarm/: CMakeLists.txt  arm_cos_q31.c  arm_sin_q31.c
libarm/include/: arm_const_structs.h  arm_math.h  arm_sin_table.h
libcordic/: CMakeLists.txt  cordic.c  matrix_arithmetic.c
src/: test.c
src/xcode_workspace.xcworkspace/: contents.xcworkspacedata
src/xcode_workspace.xcworkspace/xcuserdata/He-Man.xcuserdatad/: UserInterfaceState.xcuserstate
